<resources>
    <string name="app_name">Practice Layouts</string>
    <string name="email">Username or Email</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="sign_up">Sign Up for Fakebook</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="disclaimer">This is not your username or pin. This name will be visible to your WhatsApp contacts.</string>
    <string name="status">Status</string>
    <string name="phone">+91 9876543210</string>
    <string name="header">About and Phone Number</string>
    <string name="language">English</string>
    <string name="forgot_password_ig">Forgot your login details?</string>
    <string name="get_help">Get help signing in.</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="sign_up_ig">Sign up.</string>
    <string name="welcome_msg">Hey, hope you are having fun learning Android. This app contains a series of layout which you might be using on a daily basis but wondered how are they made.</string>
    <string name="next">Next</string>
    <string name="click_next">Please click on Next to continue</string>
    <string name="sign_in">Sign in</string>
    <string name="use_account">with your Google Account</string>
    <string name="forgot_email">Forgot email?</string>
    <string name="create_account">Create account</string>
    <string name="welcome">Welcome</string>
    <string name="account">user@gmail.com</string>
    <string name="enter_password">Enter your password</string>
    <string name="info_text">Hope you are having fun learning Android with us. You have seen few previous layouts of the apps which we use in our daily lives. We hope you tried to create them yourself. If not then, no need to worry this subject is a very vast and every day you learn new things. Since there are a lot of things it is expected from you that you make efforts to search the internet about the new things you might have seen in these practice problems.</string>
    <string name="next_to_continue">Click next to continue</string>
    <string name="whatsapp_name">WhatsApp profile name</string>
</resources>
