<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_account_circle_black_24dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@android:color/white"
        android:fontFamily="@font/average_sans"
        android:padding="18dp"
        android:text="@string/whatsapp_name"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/average_sans"
        android:padding="10dp"
        android:text="@string/disclaimer"
        android:textColor="@android:color/darker_gray" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@android:color/white"
        android:padding="10dp">

        <TextView
            android:id="@+id/txtHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/average_sans"
            android:padding="8dp"
            android:text="@string/header"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txtStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtHeader"
            android:fontFamily="@font/average_sans"
            android:padding="10dp"
            android:text="@string/status"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/txtStatus"
            android:alpha="0.6"
            android:background="@android:color/darker_gray" />


        <TextView
            android:id="@+id/txtPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view"
            android:fontFamily="@font/average_sans"
            android:padding="10dp"
            android:text="@string/phone"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

    </RelativeLayout>

    <Button
        android:id="@+id/btnFinalNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_background"
        android:padding="10dp"
        android:text="@string/next"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white"
        android:textStyle="bold" />
</LinearLayout>