<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".activity.GoogleLogin">

    <!--Here we chose relative layout as we need to
    distribute the widgets all around the page and not in a
    set horizontal or vertical order.-->

    <!--It's same old image view. Nothing new about it.-->
    <ImageView
        android:id="@+id/imgGLogo"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:padding="4dp"
        android:src="@drawable/g_logo" />

    <!--The textview for headings and other static texts-->
    <TextView
        android:id="@+id/txtSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgGLogo"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/open_sans"
        android:padding="6dp"
        android:text="@string/sign_in"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:textSize="24sp" />


    <TextView
        android:id="@+id/txtUseAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtSignIn"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/open_sans"
        android:padding="4dp"
        android:text="@string/use_account"
        android:textColor="@android:color/black" />

    <!--Edittext for user input where the user can input the email
    hence we have also placed an inputType as textEmailAddress-->
    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtUseAccount"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:maxLines="1"
        android:inputType="textEmailAddress"
        android:fontFamily="@font/open_sans"
        android:backgroundTint="@android:color/darker_gray"
        android:hint="@string/email"
        android:padding="10dp"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/txtForgotEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etEmail"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:padding="10dp"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/forgot_email"
        android:textColor="@color/colorPrimaryDarkGoogle"
        android:textStyle="bold" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="10dp"
        android:padding="10dp"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/create_account"
        android:textColor="@color/colorPrimaryDarkGoogle"
        android:textStyle="bold" />


    <Button
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/button_background"
        android:padding="10dp"
        android:text="@string/next"
        android:textAllCaps="false"
        android:elevation="6dp"
        android:fontFamily="@font/open_sans_bold"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:textStyle="bold" />

</RelativeLayout>