<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".activity.GoogleLoginNext">

    <ImageView
        android:id="@+id/imgGLogo"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:padding="4dp"
        android:src="@drawable/g_logo" />

    <TextView
        android:id="@+id/txtWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgGLogo"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/open_sans"
        android:padding="6dp"
        android:text="@string/welcome"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:textSize="24sp" />


    <!--Here you see a new attribute known as the drawableLeft.
    This attribute is used when we want a small icon to the left.
    We can also add an icon to the right using the drawableRight attribute.-->
    <TextView
        android:id="@+id/txtAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtWelcome"
        android:layout_centerHorizontal="true"
        android:drawableLeft="@drawable/ic_account_circle_black_24dp"
        android:drawablePadding="4dp"
        android:fontFamily="@font/open_sans"
        android:padding="4dp"
        android:text="@string/account"
        android:textColor="@android:color/black"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtAccount"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:maxLines="1"
        android:layout_marginTop="30dp"
        android:backgroundTint="@android:color/darker_gray"
        android:fontFamily="@font/open_sans"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@android:color/black" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="10dp"
        android:fontFamily="@font/open_sans_bold"
        android:padding="10dp"
        android:text="@string/forgot_password"
        android:textColor="@color/colorPrimaryDarkGoogle"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnNext"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/button_background"
        android:elevation="6dp"
        android:fontFamily="@font/open_sans_bold"
        android:padding="10dp"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:textStyle="bold" />

</RelativeLayout>