<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/average_sans"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/language"
        android:textColor="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="180dp"
            android:layout_height="72dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:src="@drawable/ig_logo" />

        <!--You already know about the EditText. The new attribute here
        is the custom style added in the background.

        Here you might see that the corners of the edit texts and the button are
        not sharp but curved instead.

        This is done by using a custom style in the background which we create
        in our drawable directory.

        We will discuss this in the next section of this document.-->
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:background="@drawable/et_background"
            android:hint="@string/email"
            android:padding="10dp"
            android:textSize="12sp" />


        <!--Here another new attribute is the InputType. As the name suggest,
        it is used to get different types of inputs in the edittext fields.

        You might have seen that some fields only allow number while some allow
        texts. But for passwords, they are always hidden by the little dots which
        appear when we enter the password.

        This is done by changing the input type. If you put the input type to
        textPassword, the entered text will change into small dots.-->

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/et_background"
            android:hint="@string/password"
            android:maxLines="1"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btnIGLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="14dp"
            android:background="@drawable/button_background"
            android:padding="10dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

        <!--Here in the linear layout a new attribute to notice is weightSum.

        It is used to divide the layout into equal parts. The number of the
        parts is the number written for its value. Here it is 2.

        The for the child layouts we give the layout_weight and assign them
        the percentage to be occupied. Here we have both as 1. Which means that
        out of weighted sum of 2 each layout will occupy 1 i.e. 50% of the parent-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="10dp"
            android:weightSum="2">

            <!--textAllCaps: It is set false if do not want all the text in capital letters-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:padding="4dp"
                android:text="@string/forgot_password_ig"
                android:textAllCaps="false"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:padding="4dp"
                android:text="@string/get_help"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                android:textSize="12sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <!--alpha: It is used to set the opacity of the widget-->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@+id/llSignUpIG"
        android:alpha=".6"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:id="@+id/llSignUpIG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:weightSum="2">

        <TextView
            android:id="@+id/txtSignUpIG"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/no_account"
            android:textAllCaps="false"
            android:textSize="12sp" />


        <TextView
            android:id="@+id/txtIGSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/sign_up_ig"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>